--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "@clydedsouza/create-chrome-extension",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Template to create a Chrome extension",
   "type": "module",
   "bin": {
-    "create-chrome-extension": "./index.js"
+    "create-chrome-extension": "index.js"
   },
   "scripts": {
     "start": "node .\\index.js"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "keywords": [],
   "author": "Clyde D'Souza",
@@ -15,7 +18,7 @@
   "homepage": "https://github.com/ClydeDz/create-chrome-extension-npm",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ClydeDz/create-chrome-extension-npm"
+    "url": "git+https://github.com/ClydeDz/create-chrome-extension-npm.git"
   },
   "dependencies": {
     "download-git-repo": "^3.0.2",
