Minify the js file and use in package

--- a/.github/workflows/npm_lib.yaml
+++ b/.github/workflows/npm_lib.yaml
@@ -29,6 +29,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Minify the JavaScript file
+        run: npm run minify
+
       - name: Publish package to npm
         id: publish
         uses: JS-DevTools/npm-publish@v2
